feat: dock item 분리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "jsxImportSource": "@emotion/react",
-        "types": ["@emotion/react/types/css-prop"],
+        "types": ["@emotion/react/types/css-prop", "node"],
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
