--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://dgu-fe-master.github.io/so-mac-os/",
     "name": "a",
     "version": "0.1.0",
     "private": true,
@@ -31,7 +32,9 @@
         "test": "react-app-rewired test",
         "eject": "react-app-rewired eject",
         "lint": "eslint \"src/**/*.{ts,tsx}\"",
-        "format": "prettier --write \"src/**/*.{ts,tsx}\""
+        "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -59,6 +62,7 @@
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.7.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "gh-pages": "^5.0.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.0",
         "prettier": "^2.8.4",
